[package]
name = "dao-liquid-staking-pool"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Bets <ivan.bets17@gmail.com>"]

[dependencies]
solana-program = "2.3.0"
solana-stake-interface = "1.2.1"

[dev-dependencies]
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
solana-program-test = "2.3.1"
solana-sdk = "2.3.1"
solana-client = "2.3.1"
log = "0.4.27"
dotenvy = "0.15.7"
env_logger = "0.11.8"

[features]
program-test = ["instruction"]
no-entrypoint = []
instruction = []

[lib]
crate-type = ["cdylib", "lib"]

[[test]]
name = "program"
path = "tests/program.rs"

[[example]]
name = "client"
path = "examples/client.rs"